fix-repeting-pros-add-gap-in-mobile

--- a/src/components/featureLeft.css
+++ b/src/components/featureLeft.css
@@ -10,6 +10,7 @@
     .feature-left {
         display: flex;
         flex-direction: column;
+        gap: 1em;
     }
 }
 
