--- a/src/components/featureRight.css
+++ b/src/components/featureRight.css
@@ -10,6 +10,7 @@
     .feature-right {
         display: flex;
         flex-direction: column;
+        gap: 1em;
     }
 }
 
